--- a/evento/evento.html
+++ b/evento/evento.html
@@ -34,7 +34,7 @@
         <!--================================================-->
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="index.html"><img src="../logo/sushi.png" alt="logo"> goma</a>
+            <a class="navbar-brand" href="../index.html"><img src="../logo/sushi.png" alt="logo"> goma</a>
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
