--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="sushi nikei,deleitate con los mejores sabores de la comida japonesa">
+    <meta name="keywords" content="inicio,quienessomos,evento,carta,contacto,sushi,comida japonesa,fusion nikkei">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/03a03447f0.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="logo/sushi.png">
+    <link rel="shortcut icon" href="logo/portada.png">
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Noto+Sans+JP:wght@100&family=Oswald&display=swap"
@@ -32,7 +34,7 @@
     <!--================================================-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="index.html"><img src="logo/sushi.png" alt="logo"> goma</a>
+        <a class="navbar-brand" href="index.html"><img src="logo/logo a y f (3) (1).png" alt="logo"> goma</a>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -122,7 +124,7 @@
     <!-------inicio del footer------------------>
     <footer id="footer">
         <div class="footer__div ">
-            <a href="../index.html" class="footer__logo"><img src="logo/sushi.png" alt="logo"></a>
+            <a href="../index.html" class="footer__logo"><img src="logo/logo a y f (3) (1).png" alt="logo"></a>
             <p class="footer__div--p">telefono:<br>080000000</p>
         </div>
         <form class="footer_div--formulario ">
