--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contactanos a nuestros numeros y correo para una mejor atencion">
     <meta name="keywords" content="contactos,cotizacion,reserva,telefono,sushi,">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Monoton&family=Oswald&family=Qwitcher+Grypen&display=swap"
+    rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -34,7 +37,7 @@
     <!--================================================-->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" href="../index.html"><img src="../logo/logo a y f (3) (1).png" alt="logo"> goma</a>
+        <a class="navbar-brand" href="../index.html"><img src="../logo/logo a y f (3) (1) (1).png" alt="logo"> goma</a>
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -139,7 +142,7 @@
     <!-------inicio del footer------------------>
     <footer id="footer" class="margin">
         <div class="footer__div ">
-            <a href="../index.html" class="footer__logo"><img src="../logo/logo a y f (3) (1).png" alt="logo"></a>
+            <a href="../index.html" class="footer__logo"><img src="../logo/portada.png" alt="logo"></a>
             <p class="footer__div--p">telefono:<br>080000000</p>
         </div>
         <form class="footer_div--formulario ">
